Implement support for the "type" attribute of <a> elements.  Bug 214626, r=adamlock, sr=darin